--- a/styles/style.css
+++ b/styles/style.css
@@ -1,37 +1,3 @@
-/**************/
-/* CSS REMEDY */
-/**************/
-*, *::after, *::before {
-  box-sizing:border-box;  
-}
-
-button, summary {
-	cursor: pointer;
-}
-
-
-
-
-
-/*********************/
-/* CUSTOM PROPERTIES */
-/*********************/
-:root {
-	/* startje */
-	--color-text:#111;
-	--color-background:#eee;
-}
-
-
-
-
-
-/****************/
-/* JOUW STYLING */
-/****************/
-
-/* jouw code */
-
 body {
     background-color: black;
     font-family: 'Open Sans', sans-serif;
@@ -39,7 +5,7 @@ body {
 
 h1 {
     color: white;
-    font-size: 3em;
+    font-size: 2em;
     display: grid;
     place-content: center;
 }
@@ -65,15 +31,47 @@ main li {
 main h2 {
     color: white;
     min-height: 3.125rem;
-    margin: .75rem;
 
-    font-size: 1.375rem;
+
+    font-size: 1rem;
     line-height: 1.125em;
     text-align: center;
+    margin-bottom: 0;
+    text-transform: uppercase;
 }
 
 main p {
     color: white;
     text-align: center;
+    margin: 0;
 }
 
+section {
+    background-color: gray;
+    padding: 1em 1em 1em;
+    text-align: center;
+}
+
+section h1 {
+    text-transform: uppercase;
+}
+
+section p {
+    font-size: 1.25rem;
+    line-height: 1.75rem;
+    text-align: center;
+    margin-bottom: 2rem;
+}
+
+footer li {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    max-height: 2.5rem;
+    max-width: 2.5rem;
+}
+
+footer img {
+ 
+
+}
