--- a/styles/style.css
+++ b/styles/style.css
@@ -1,55 +1,317 @@
+:root {
+    --color-background: #f9f9f9;
+    --color-border: #cacfd5;
+    --color-header: #1b1c1e;
+    --color-text-default: #1b1c1e;
+    --color-text-header: #f9f9f9;
+    --color-base: #f4f5f6;
+    --color-accent: #ba0d37; 
+
+    font-family: 'Mulish', sans-serif;
+}
+
+/* DARK MODE */
+
+@media (prefers-colour-scheme:dark) {
+    :root {
+    --color-background: #1b1c1e;
+    --color-border: #697278;
+    --color-text-default: #f9f9f9;
+    --color-base: #293238;
+    --color-accent: #ec1a62; }
+}
+
+/* MEDIA QUERY VOOR GRID */
+/* De min-width:28em zorgt ervoor dat er 2 items op 1 rij geplaatst worden.
+De min-width:48em zorgt ervoor dat er 4 items op 1 rij geplaatst worden. */
+
+@media (min-width:28em) {
+        section ul {
+            grid-template-columns: 1fr 1fr;
+        }
+    }
+    
+    @media (min-width:48em) {
+        section ul {
+            grid-template-columns: 1fr 1fr 1fr 1fr;
+        }
+}
+
+/* Dit verhelpt de witte ruimte aan de zijkant van mijn website*/
+html, body {
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+
+    overflow-x: hidden; 
+}
+
 body {
-    background-color: black;
-    font-family: 'Open Sans', sans-serif;
+    height:100vh;
 }
 
-h1 {
-    color: white;
-    font-size: 2em;
-    display: grid;
-    place-content: center;
+/* Simpele CSS Remedy */
+/* naar een idee van Jen Simmons */
+/* https://github.com/jensimmons/cssremedy */
+*, *::after, *::before {
+    box-sizing:border-box;  
 }
 
-main ul {
-    display: grid;
-    grid-template-columns: repeat( auto-fit, minmax(min(20em, 100%), 1fr) );
-    gap: 2em;
-
-    margin: 0;
-    padding: 0 2em 2em;
-    list-style: none;
+button:not(disabled) {
+    cursor:pointer;
+}  
+    
+/********************/
+/* ALGEMENE STIJLEN */
+/********************/
+  body {
+    margin:0;
+    background-color:var(--general-background);
+    color:var(--general-color);
+}
+  
+/******************************************************/
+/* styling voor de small-screen versie van de website */
+/******************************************************/
+  
+/*************/
+/* DE HEADER */
+/*************/
+header {
+    min-height:4em;
+    padding:0 1em;
+    background-color:var(--color-header);
+    line-height:1;
+    
+    /* JOUW CODE HIER - stap 3 */
+    display:flex;
+    justify-content:space-between;
+    align-items:center;
+    
+    position:sticky;
+    top:0;
+    z-index: 2;
 }
 
-main li {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
-    padding: 1.5em 1.5em 0;
 
-}
-
-main h2 {
-    color: white;
-    min-height: 3.125rem;
-
-
-    font-size: 1rem;
-    line-height: 1.125em;
-    text-align: center;
-    margin-bottom: 0;
+/* alle links in de header */
+header a {
+    padding:.5em 0;
+    color:var(--color-text-header);
+    text-decoration: none;
     text-transform: uppercase;
 }
+  
+/********/
+/* LOGO */
+/********/
+header > a:first-of-type {
+    /* om het boek en de titel te positioneren */
+    display:grid;
+    grid-template-columns:min-content min-content;
+    grid-gap:.25em;
+    align-items:center;
+    
+    font-weight:bold; 
+}
+  
+header > a:first-of-type img {
+    height: 2.5em;
+}
+  
+/*SHOPPING CART ICON*/  
 
-main p {
-    color: white;
-    text-align: center;
-    margin: 0;
+header > a:last-of-type img {
+    width: auto;
+    height: 1.5em;
+    padding-right: 3em;
+}
+  
+/*****************/
+/* BEIDE BUTTONS */
+/*****************/
+header button {
+    padding:.5em;
+    
+    /* icon en tekst met gap-je naast elkaar */
+    display:flex;
+    align-items:center;
+    gap:.25em;
+    
+    /* standaard styling aanpassen */
+    appearance:none;
+    background-color:var(--button-background);
+    border:none;
+    border-radius:.25em; 
+    font:inherit;
+    text-align:center;
+    color:var(--button-color);
+}
+  
+  header button img {
+    height:1em;
+  }
+  
+  
+  /***************/
+  /* MENU BUTTON */
+  /***************/
+  header > button {
+    /* JOUW CODE HIER - stap 3 */
+    order:-1;
+  }
+  
+
+  /***************/
+  /* SLUIT BUTTON */
+  /***************/
+  nav button {
+   justify-self:start;
+  }
+  
+  /************/
+  /* HET MENU */
+  /************/
+  nav {
+    padding:1em;
+    
+    display:grid;
+    align-content:start;
+    gap:1em;
+    
+    background-color:var(--color-header);
+    
+    /* JOUW CODE HIER - stap 1 */
+    position:fixed;
+    left:0;
+    right:0;
+    top:0;
+    bottom:0;
+    
+    /* JOUW CODE HIER - stap 2 */
+    transform:translatex(-100%);
+    
+    /* JOUW CODE HIER - stap 4 */
+    transition:transform .3s;
+  }
+  
+  /* als menu open is */
+  nav.toonMenu {
+    /* JOUW CODE HIER - stap 4 */
+    transform:translatex(0);
+  }
+  
+  /*******************/
+  /* LIJST MET LINKS */
+  /*******************/
+  nav ul { 
+    margin:0; 
+    padding:0em;
+    list-style:none;
+  }
+  
+  
+  
+  /************************/
+  /* EEN LINK IN DE LIJST */
+  /************************/
+  nav a {
+    /* icon en tekst met gap-je naast elkaar */
+    display:flex;
+    align-items:center;
+    column-gap:.25em;
+    
+    border-bottom:solid 1px var(--menu-border);
+  }
+  
+  nav a img {
+    width:auto;
+    height:2em;
+  }
+  
+  nav a.active {
+    font-weight:bold;
+  }
+  
+  
+  
+  /****************************************************************/
+  /* styling voor de header als de browser minimaal 45em breed is */
+  /****************************************************************/
+  @media (min-width:45em) {
+    header > button {
+      /* JOUW CODE HIER - stap 6 */
+      display:none;
+    }
+    
+    nav {
+      /* JOUW CODE HIER - stap 7 */
+      position:static;
+      transform:none;
+      padding:0;
+      
+      background:none;
+    }
+    
+    nav button {
+      /* JOUW CODE HIER - stap 6 */
+      display:none;
+    }
+    
+    nav ul {
+      /* JOUW CODE HIER - stap 8 */
+      display:flex;
+      gap:2em;
+    }
+    
+    nav a {
+      /* JOUW CODE HIER - stap 9 */
+      flex-direction:column;
+      
+      border:none;
+    }
+    
+    header > a:last-of-type {
+      /* JOUW CODE HIER - stap 9 */
+      flex-direction:column;
+    }
+  }
+  
+  /****************************************************************/
+  /* styling voor de header als de browser minimaal 55em breed is */
+  /****************************************************************/
+  @media (min-width:55em) {
+    header > a:last-of-type,
+    nav a {
+      /* JOUW CODE HIER - stap 10 */
+      flex-direction:row;
+    }
+  }
+
+/* UL SETTINGS
+voor elke unordered list */
+
+ul {
+    margin:0;
+    padding:0;
+    list-style:none;
+
+    display: grid;
+    gap: 1em;
+}
+
+li {
+    display: flex;
+    flex-direction: column;
 }
 
 section {
-    background-color: gray;
+    background-color: #F9F9F9;
     padding: 1em 1em 1em;
     text-align: center;
+
+    margin-top: 2em;
 }
 
 section h1 {
@@ -57,21 +319,202 @@ section h1 {
 }
 
 section p {
-    font-size: 1.25rem;
     line-height: 1.75rem;
     text-align: center;
     margin-bottom: 2rem;
 }
 
-footer li {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
-    max-height: 2.5rem;
-    max-width: 2.5rem;
+main ul img {
+    width: 100%;
+    display: block;
+
+    cursor:pointer;
 }
 
-footer img {
- 
 
+/* MARQUEE */
+
+marquee {
+    background-color: #ba0d37;;
+    color: #F9F9F9;
+    display: block;
+
+    padding: .60em;
+    text-transform: uppercase;
+}
+
+/* H'TJES, P'TJES EN ANDERE TEKST CSS */
+
+h1 {
+    color: #1b1c1e;
+    font-size: 1.5em;
+    line-height: 3rem;
+
+    display: grid;
+    place-content: center;
+}
+
+h2 {
+    font-size: 1rem;
+    text-transform: uppercase;
+
+    cursor:pointer;
+}
+
+h3 {
+    text-align: center;
+    text-transform: uppercase;
+    font-size: 0.9375rem;
+    
+    cursor:pointer;
+}
+
+em {
+    color:red;
+    font-style: normal;
+}
+
+p {
+    color: #1b1c1e;
+    text-align: center;
+    margin: 0;
+
+    cursor:pointer;
+}
+
+/* PICTURE TAGS */
+
+picture:nth-of-type(1) img {
+    width: 100%;
+    height: 100%;
+    padding-bottom: 2em;
+    object-fit: cover;
+}
+
+picture:nth-of-type(2) img {
+    width: 100%;
+    height: 100%;
+    padding-top: 2em;
+    padding-bottom: 2em;
+    object-fit: cover;
+}
+
+picture:nth-of-type(3) img {
+    width: 100%;
+    height: 100%;
+    padding-top: 2em;
+    padding-bottom: 2em;
+    object-fit: cover;
+}
+
+/* NTH-OF-TYPES SECTION 1 */
+/* Hieronder zijn alle 'secondary' images. Wanneer de gebruiker op een product hovered, worden deze afbeeldingen getoond.*/
+section:nth-of-type(1) li:nth-of-type(1) img:hover {
+    content: url(images/pink-tennis-skirt-2.png); 
+}
+section:nth-of-type(1) li:nth-of-type(2) img:hover {
+    content: url(images/eden-straight-leg-jeans-2.png); 
+}
+
+section:nth-of-type(1) li:nth-of-type(3) img:hover {
+    content: url(images/gaia-slit-lace-skirt-2.png); 
+}
+
+section:nth-of-type(1) li:nth-of-type(4) img:hover {
+    content: url(images/tall-grid-tennis-skirt-2.png); 
+}
+
+section:nth-of-type(1) li:nth-of-type(5) img:hover {
+    content: url(images/sinister-straight-leg-2.png); 
+}
+
+section:nth-of-type(1) li:nth-of-type(6) img:hover {
+    content: url(images/astrid-embroidered-shirt-2.png); 
+}
+
+section:nth-of-type(1) li:nth-of-type(7) img:hover {
+    content: url(images/morbid-shorts-2.png); 
+}
+
+section:nth-of-type(1) li:nth-of-type(8) img:hover {
+    content: url(images/moon-cult-crop-top-2.png); 
+}
+
+/* FOOTER */
+
+footer {
+    padding-bottom: 1em;
+}
+
+footer>p:last-of-type {
+    font-size: 14px;
+}
+
+footer ul {
+    list-style: none;
+    align-items: center;
+    padding: 2em;
+}
+
+footer ul a {
+    text-decoration: none;
+    text-align: center;
+    color: #1b1c1e;
+}
+
+footer ul a:hover {
+    text-decoration: underline;
+}
+
+footer ul:nth-of-type(1) img {
+    width: auto;
+    max-width: 50px;
+
+    padding-right: 1rem;
+}
+
+footer ul:nth-of-type(1) img {
+    max-width: 500px;
+}
+
+footer>ul:nth-of-type(1) {
+    display: flex;
+    justify-content: center;
+
+    gap: 2em;
+}
+
+footer ul:nth-of-type(5) img {
+    max-width: 50px;
+}
+
+footer>ul:nth-of-type(5) {
+    display: flex;
+    justify-content: center;
+
+    gap: 2em;
+}
+
+footer>section>img {
+    max-width: 100px;
+}
+
+footer ul:nth-of-type(2) li:nth-of-type(1) {
+    border-style:solid;
+	border-color:#cacfd5;
+	border-width:2px 0 0;
+}
+
+footer ul:nth-of-type(2) li:nth-of-type(2) {
+    border-style:solid;
+	border-color:#cacfd5;
+	border-width:2px 0 0;
+}
+
+footer ul:nth-of-type(2) li:nth-of-type(3) {
+    border-style:solid;
+	border-color:#cacfd5;
+	border-width:2px 0 2px;
+
+    padding-bottom: 1em;
 }
