--- a/styles/style2.css
+++ b/styles/style2.css
@@ -260,9 +260,6 @@ header button {
   }
   
   
-  
-  
-  
   /****************************************************************/
   /* styling voor de header als de browser minimaal 57em breed is */
   /****************************************************************/
@@ -273,9 +270,6 @@ header button {
       flex-direction:row;
     }
   }
-  
-  
-  
   
   
   /***********/
@@ -301,6 +295,10 @@ header button {
     padding:0 2.5vw 2.5vw;
 }
 
+/* ********************************** */
+/* ********************************** */
+/* ********************************** */
+
 /* UL SETTINGS
 voor elke unordered list */
 
@@ -317,6 +315,10 @@ li {
     display: flex;
     flex-direction: column;
 }
+
+/* ********************************** */
+/* ********************************** */
+/* ********************************** */
 
 /* H'TJES, P'TJES EN ANDERE TEKST CSS */
 
@@ -351,79 +353,70 @@ p {
     cursor:pointer;
 }
 
-/* SECTION CAROUSEL */
-section:nth-of-type(1) {
-	position:relative;	
-}
+/* ********************************** */
+/* ********************************** */
+/* ********************************** */
 
-section:nth-of-type(1) button {
-	font:inherit;
-	position:absolute;
-	bottom:10em;
-	transform:translateY(50%);
+/* CAROUSEL / IMAGE PICKER */
 
-    background-color: #1b1c1e;
-    color: #f9f9f9;
-
-    border:none;
-    border-radius:.25em; 
-}
-
-section:nth-of-type(1) button:nth-of-type(1) {
-	left:0;
-    margin-bottom: 4em;
-}
-
-section:nth-of-type(1) button:nth-of-type(2) {
-	right:0;
-    margin-bottom: 4em;
-}
-
-section>ul {
+main > ul:nth-of-type(1) {
+	display:flex;
+	overflow:hidden;
+	
 	margin:0;
 	padding:0;
 	list-style:none;
-	
+}
+
+main > ul:nth-of-type(1)  li {
+	width:100%;
+	flex-shrink:0;
+}
+
+main > ul:nth-of-type(1)  li img {
+	width:50%;
+}
+
+main > ul:nth-of-type(2) {
 	display:flex;
-	overflow:auto;
+	gap:1em;
+	
+	margin:0;
+	padding:0;
+	list-style:none;
 }
 
-section>ul img {
-	width:20em;
-	display:block;
+main > ul:nth-of-type(1)  li {
+	flex-grow:1;
 }
 
-/* SECTION 2 */
+main > ul:nth-of-type(2) img {
+	width:100%;
+} 
 
-section:nth-of-type(2) ul {
-    justify-content: center;
+/* ********************************** */
+/* ********************************** */
+/* ********************************** */
+
+/* STICKY */
+main > section {
+	display:grid;
+	grid-template-columns:1fr 1fr;
+	gap: 1em;
 }
 
-section:nth-of-type(2) h2 {
-    font-size: 1.5em;
+section section:nth-of-type(1) img {
+	position:sticky;
+	top:0;
 }
 
-section:nth-of-type(2) button {
-    background-color: var(--color-button);
-    border-color: var(--color-button);
-    border-radius: 15%;
-    border-style: solid;
-    
-    min-width: 3rem;
-    min-height: 3rem;
-
-    font-size: 1.2em;
-    color: var(--color-base);
-
-    transition:transform.0.4s;
-    
+section section:nth-of-type(1) img {
+	width:100%;
 }
 
-section:nth-of-type(2) button:hover {
-    background-color: var(--color-button-hover);
-    border-color: var(--color-button-hover);
-    color: var(--button-hover-text);
-}
+/* ********************************** */
+/* ********************************** */
+/* ********************************** */
 
 /* FOOTER */
 
